# hudhook

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  build.rs  design.md  foo.txt  index.html  rust-toolchain.toml  search-index.js  settings.html  source-files.js
.cargo/: config.toml
.github/workflows/: docs.yml  lint.yml
_examples/: dx11_hook.rs  dx9_hook.rs  opengl3_hook.rs
_examples/renderers/: dx11.rs  dx9.rs
dependencies/rust-imgui-opengl-renderer/: .travis.yml  Cargo.toml  README.md  build.rs
dependencies/rust-imgui-opengl-renderer/src/: lib.rs
examples/: demo_hook_dx11.rs  demo_hook_dx12.rs  demo_hook_dx9.rs  demo_hook_opengl3.rs  dummy_hook.rs  dx11_hook.rs  dx11_host.rs  dx12_hook.rs  dx9_hook.rs  hello_world.rs  hook_with_image.rs  injector.rs  opengl3_hook.rs  simple_hook.rs
examples/dinput8_hook/: Cargo.toml
examples/dinput8_hook/src/: lib.rs
examples/dinput8_hook_d3d12/: Cargo.toml
examples/dinput8_hook_d3d12/src/: lib.rs
examples/renderers/: dx11.rs  dx12.rs  dx9.rs
examples/support/: mod.rs
examples/wgpu-experiment/: Cargo.toml  build.rs
examples/wgpu-experiment/src/: attempt1.rs  attempt2.rs  dcomp.rs  imgui_dx12.rs  lib.rs  main.rs  mh.rs
hudbook/: .gitignore  book.toml
hudbook/hello-hud/: Cargo.toml
hudbook/hello-hud/src/: lib.rs  main.rs
hudbook/src/: README.md  SUMMARY.md  docs
hudbook/src/advanced/: README.md  proxy-dll.md  roll-your-own-dllmain.md
hudbook/src/creating-library/: 01-project-setup.md  02-writing-dll.md  03-entry-point.md  entry-point.md  project-setup.md  writing-dll.md
hudbook/src/injecting-library/: 01-injecting.md  injecting.md
hudhook/: Cargo.toml  LICENSE  all.html  build-mh.rs  build.rs  fn.apply_hook.html  fn.get_dll_path.html  fn.inject.html  index.html  macro.hudhook!.html  macro.hudhook.html  sidebar-items.js  struct.Error.html  struct.RenderContext.html  trait.RenderLoop.html
hudhook/examples/: hook_ds3.rs  hook_me.rs  hook_you.rs  hook_you_dx11.rs  hook_you_dx9.rs  hook_you_ogl3.rs  unhook.rs
hudhook/examples/renderers/: dx11.rs
hudhook/hook/: fn.apply_hook.html  struct.RenderContext.html  trait.RenderLoop.html
hudhook/inject/: fn.inject.html
hudhook/memory/: fn.aob_scan.html  fn.base_address.html  index.html  sidebar-items.js  struct.PointerChain.html
hudhook/memory/pointer_chain/: struct.PointerChain.html
hudhook/memory/process_util/: fn.aob_scan.html  fn.base_address.html
hudhook/src/: inject.rs  lib.rs  mh.rs
hudhook/src/hooks/: common.rs  dx11.rs  dx12.rs  dx9.rs  mod.rs  opengl3.rs
hudhook/src/renderers/: imgui_opengl3.rs
hudhook/util/: fn.get_dll_path.html  struct.Error.html
imgui-dx11/: Cargo.toml
imgui-dx11/examples/: hello_world.rs
imgui-dx11/src/: buffers.rs  common.rs  device_and_swapchain.rs  lib.rs  render_engine.rs  shader_program.rs  state_backup.rs  texture.rs
imgui-dx12/: Cargo.toml  imgui_impl_dx12.cpp
imgui-dx12/examples/: hello_world.rs
imgui-dx12/src/: lib.rs
imgui-dx12/src/old/: renderer.rs
imgui-dx9/: Cargo.toml
imgui-dx9/examples/: dx9_winit.rs  winit.rs
imgui-dx9/src/: lib.rs
imgui-ogl3/: Cargo.toml
imgui-opengl3/: Cargo.toml
imgui-opengl3/src/: lib.rs
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
lib/test_sample/: test_sample.cpp
run_examples/: all.html  fn.example_hello_world.html  fn.main.html  index.html  sidebar-items.js
src/: hook.rs  inject.rs  lib.rs  mh.rs  old_hook.rs  pipeline.rs  render_loop.rs  util.rs
src/compositor/: alpha_blend.cso  alpha_blend.hlsl  d3d12.rs  dcomp.rs  dx11.rs  dx12.rs  dx12_compute.rs  dx12_new.rs  dx9.rs  mod.rs  opengl3.rs
src/config/: mod.rs
src/hooks/: common.rs  dx11.rs  dx12.rs  dx9.rs  mod.rs  opengl3.rs  render.rs
src/hooks/common/: input.rs  mod.rs  raw_input.rs  wnd_proc.rs
src/hooks/input/: mod.rs
src/hudhook/: hook.rs.html  inject.rs.html  lib.rs.html  mh.rs.html
src/hudhook/imgui_impl/dx11/: mod.rs.html  shaders.rs.html  state_backup.rs.html
src/hudhook/memory/: mod.rs.html  pointer_chain.rs.html  process_util.rs.html
src/hudhook/util/: bmh.rs.html  mod.rs.html
src/imgui_impl/: mod.rs
src/imgui_impl/dx11/: mod.rs  shaders.rs  state_backup.rs
src/legacy/: mod.rs
src/legacy/hooks/: dx12.rs  dx9.rs
src/legacy/hooks/common/: wnd_proc.rs
src/legacy/renderers/: imgui_dx11.rs  imgui_opengl3.rs  mod.rs
src/memory/: mod.rs  pointer_chain.rs  process_util.rs
src/renderer/: compositor.rs  dx12.rs  engine.rs  engine_new.rs  input.rs  keys.rs  mod.rs  msg_filter.rs  pipeline.rs  state.rs
src/renderer/backend/: dx11.rs  dx12.rs  dx9.rs  mod.rs  opengl3.rs
src/renderer/vulkan/: mod.rs
src/renderer/vulkan/shaders/: shader.frag.spv  shader.vert  shader.vert.spv
src/renderers/: imgui_dx11.rs  imgui_dx12.rs  imgui_dx9.rs  imgui_opengl3.rs  mod.rs
src/renderers/imgui_dx11/: buffers.rs  device_and_swapchain.rs  mod.rs  render_engine.rs  shader_program.rs  state_backup.rs  texture.rs
src/run_examples/: run_examples.rs.html
src/util/: bmh.rs  mod.rs
tests/: dx11.rs  dx12.rs  dx12.rs1  dx9.rs  dx9.rs1  hello.webm  hook.rs  inject.rs  injection.rs  opengl3.rs  opengl3.rs1
tests/harness/: dx11.rs  dx12.rs  dx9.rs  mod.rs  opengl3.rs
