[package]
name = "hudhook"
version = "0.2.0"
edition = "2021"
description = "A graphics API hook with dear imgui render loop. Supports DirectX 11 and 12."
homepage = "https://github.com/veeenu/hudhook"
repository = "https://github.com/veeenu/hudhook"
documentation = "https://veeenu.github.io/hudhook"
license-file = "LICENSE"
authors = ["Andrea Venuta <venutawebdesign@gmail.com>"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

# Hook examples
#
# These are minimal examples of how to use the library.

[[example]]
name = "dx9_hook"
crate-type = ["cdylib"]

[[example]]
name = "dx11_hook"
crate-type = ["cdylib"]

[[example]]
name = "dx12_hook"
crate-type = ["cdylib"]

[[example]]
name = "opengl3_hook"
crate-type = ["cdylib"]

# Hosts examples
#
# These examples contain code that creates an empty window with a rendering
# surface for the appropriate engine. Hook examples should be attached to these.

[[example]]
name = "dx11_host"
crate-type = ["bin"]

# Renderers examples
#
# These examples contain code that creates a window and a rendering surface and
# plainly renders some imgui code with the appropriate renderer.

[[example]]
name = "renderer-dx9"
path = "examples/renderers/dx9.rs"
crate-type = ["bin"]

[[example]]
name = "renderer-dx11"
path = "examples/renderers/dx11.rs"
crate-type = ["bin"]

[[example]]
name = "renderer-dx12"
path = "examples/renderers/dx12.rs"
crate-type = ["bin"]

[[bin]]
name = "inject"

[dependencies]
console = "0.15.0"
detour = { package = "detour2", version = "0.9.0" }
dialoguer = "0.9.0"
imgui = "0.8.0"
imgui-opengl-renderer = "0.11"
imgui-winit-support = "0.8.0"
gl_loader = "0.1"
log = "0.4.16"
memoffset = "0.6.5"
once_cell = "1.8.0"
parking_lot = "0.11.2"
raw-window-handle = "0.3"
simplelog = "0.11.0"
widestring = "1.0.1"
windows = { version = "0.39.0", features = [
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Direct3D9",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D12",
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Gdi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
winit = "0.27"

[build-dependencies]
cc = "1.0.72"
