[package]
name = "hudhook"
version = "0.6.0"
edition = "2021"
description = "A graphics API hook with dear imgui render loop. Supports DirectX 9, 11, 12, and OpenGL 3."
homepage = "https://github.com/veeenu/hudhook"
repository = "https://github.com/veeenu/hudhook"
documentation = "https://veeenu.github.io/hudhook"
license-file = "LICENSE"
authors = ["Andrea Venuta <venutawebdesign@gmail.com>"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]

[features]
default = ["dx9", "dx11", "dx12", "opengl3", "inject"]
dx9 = []
dx11 = []
dx12 = []
opengl3 = []
inject = []

[[example]]
name = "simple_hook"
crate-type = ["cdylib"]

[[example]]
name = "hook_with_image"
crate-type = ["cdylib"]

[dependencies]
imgui = "0.11"
imgui-opengl = "0.1"
parking_lot = "0.12"
windows = { version = "0.51.0", features = [
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Foundation",
  "Foundation_Numerics",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Direct3D9",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D12",
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_DirectComposition",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_OpenGL",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
tracing = { version = "0.1", features = ["log"] }
memoffset = "0.9.0"
once_cell = "1.18.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
image = "0.24.8"
tracing-subscriber = "0.3"

[build-dependencies]
cc = "1.0.72"

[profile.test]
opt-level = 3
overflow-checks = false
lto = "thin"
