[package]
name = "hudhook"
version = "0.2.0"
edition = "2021"
description = "A graphics API hook with dear imgui render loop. Supports DirectX 11 and 12."
homepage = "https://github.com/veeenu/hudhook"
repository = "https://github.com/veeenu/hudhook"
documentation = "https://veeenu.github.io/hudhook"
license-file = "LICENSE.md"
authors = ["Andrea Venuta <venutawebdesign@gmail.com>"]
build = "build.rs"
links = "minhook"

[features]
default = []
dxgi_debug = []

[[example]]
name = "hook_you"
crate-type = ["cdylib"]

[[bin]]
name = "inject"

[dependencies]
console = "0.15.0"
dialoguer = "0.9.0"
imgui = "0.8.0"
imgui-dx11 = { path = "../imgui-dx11" }
imgui-dx12 = { path = "../imgui-dx12" }
log = "0.4.16"
once_cell = "1.8.0"
parking_lot = "0.11.2"
simplelog = "0.11.0"
widestring = "0.5.1"
winapi = { version = "0.3.9", features = [ 
  "std", "d3d11", "d3d12", "dinput", "dinputd", 
  "dxgi", "d3dcompiler", "ntdef", "minwindef",
  "windef", "psapi", "memoryapi", "synchapi",
  "winuser", "processthreadsapi", "xinput",
  "libloaderapi", "winerror", "dxgidebug"
] }
windows = { version = "0.34.0", features = [
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Direct3D12",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Gdi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
cc = "1.0.72"
