[package]
name = "hudhook"
version = "0.2.0"
edition = "2021"
description = "A graphics API hook with dear imgui render loop. Supports DirectX 11 and 12."
homepage = "https://github.com/veeenu/hudhook"
repository = "https://github.com/veeenu/hudhook"
documentation = "https://veeenu.github.io/hudhook"
license-file = "LICENSE"
authors = ["Andrea Venuta <venutawebdesign@gmail.com>"]

[[example]]
name = "hook_you_dx9"
crate-type = ["cdylib"]

[[example]]
name = "hook_you_dx11"
crate-type = ["cdylib"]

[[bin]]
name = "inject"

[dependencies]
console = "0.15.0"
detour = "0.8.1"
dialoguer = "0.9.0"
imgui = "0.8.0"
imgui-dx9  = { path = "../imgui-dx9"  }
imgui-dx11 = { path = "../imgui-dx11" }
imgui-dx12 = { path = "../imgui-dx12" }
log = "0.4.16"
once_cell = "1.8.0"
parking_lot = "0.11.2"
simplelog = "0.11.0"
widestring = "0.5.1"
windows = { version = "0.34.0", features = [
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemServices",
  "Win32_System_WindowsProgramming",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Direct3D9",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D12",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Gdi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
cc = "1.0.72"
