[package]
name = "imgui-dx12"
version = "0.1.0"
edition = "2021"

[[example]]
name = "hello_world"
crate_type = ["bin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.8.0"
imgui-sys = "0.8.0"
log = "0.4.16"
memoffset = "0.6.5"
simplelog = "0.11.2"
windows = { version = "0.34.0", features = [
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D12",
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
] }
