[package]
name = "dinput8_hook"
version = "0.1.0"
edition = "2021"
authors = ["AuroraSilvaX", "Andrea Venuta <venutawebdesign@gmail.com>"]

[lib]
name = "dinput8"
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.39.0", features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }
