[package]
name = "wgpu-experiment"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[[bin]]
name = "runme"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.77"
dll-syringe = { git = "https://github.com/OpenByteDev/dll-syringe" }
imgui = "0.11.0"
imgui-wgpu = "0.24.0"
memoffset = "0.9.0"
pollster = "0.3.0"
raw-window-handle = "0.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "0.17.0"
windows = { version = "0.52.0", features = [
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Foundation",
  "Foundation_Numerics",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_DirectComposition",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Direct3D9",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D12",
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_OpenGL",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
]}

[build-dependencies]
cc = "1.0.72"
